--- a/index.html
+++ b/index.html
@@ -398,7 +398,30 @@
     </div>
 
     <!-- Js  -->
-    <script src="/js/script.js"></script>
+    <scrip>
+        let calcScrollValue = () => {
+        let scrollProgress = document.getElementById("progress");
+        let progressValue = document.getElementById("progress-value");
+        let pos = document.documentElement.scrollTop;
+        let calcHeight =
+        document.documentElement.scrollHeight -
+        document.documentElement.clientHeight;
+        let scrollValue = Math.round((pos * 100) / calcHeight);
+        if (pos > 100) {
+        scrollProgress.style.display = "grid";
+        } else {
+        scrollProgress.style.display = "none";
+        }
+        scrollProgress.addEventListener("click", () => {
+        document.documentElement.scrollTop = 0;
+        });
+        scrollProgress.style.background = `conic-gradient(#1E6692 ${scrollValue}%, #d7d7d7 ${scrollValue}%)`;
+        };
+        
+        window.onscroll = calcScrollValue;
+        window.onload = calcScrollValue;
+
+    </scrip>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
