--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
     </div>
 
     <!-- Js  -->
-    <scrip>
+    <script>
         let calcScrollValue = () => {
         let scrollProgress = document.getElementById("progress");
         let progressValue = document.getElementById("progress-value");
@@ -421,7 +421,7 @@
         window.onscroll = calcScrollValue;
         window.onload = calcScrollValue;
 
-    </scrip>
+    </script>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
