--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LANCETECH LIMITED</title>
-    <link rel="shortcut icon" href="/images/logo2.png" type="image/ico">
-  
+    <link rel="shortcut icon" href="/assets/logo2.png" type="image/ico">
+
     <!-- Front Awesome kit  -->
     <script src="https://kit.fontawesome.com/f56a2b051a.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
@@ -18,8 +18,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
-<!-- CSS stylesheet link  -->
-<link rel="stylesheet" href="./css/style.css">
+    <!-- CSS stylesheet link  -->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
     <!-- Header Start  -->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="/images/logo.png" alt="" class="img-fluid"></a>
+            <a class="navbar-brand" href="#"><img src="/assets/logo.png" alt="" class="img-fluid"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -83,32 +83,32 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-                <img src="/images/banner.png" class="d-block img-fluid w-100" alt="...">
+                <img src="/assets/banner.png" class="d-block img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column justify-content-center h-100">
                     <h1>Welcome to <br> <span>LANCETECH LIMITED</span></h1>
                     <p>Part of your Business</p>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="/images/banner2.jpg" class="d-block img-fluid w-100" alt="...">
+                <img src="/assets/banner2.jpg" class="d-block img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column justify-content-center h-100">
                     <h1>Chromatography Columns & Consumables</h1>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/images/banner3.jpg" class="d-block img-fluid w-100" alt="...">
+                <img src="/assets/banner3.jpg" class="d-block img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column justify-content-center h-100">
                     <h1>Save the World</h1>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/images/banner4.jpg" class="d-block img-fluid w-100" alt="...">
+                <img src="/assets/banner4.jpg" class="d-block img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column justify-content-center h-100">
                     <h1>crs</h1>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/images/banner5.jpg" class="d-block img-fluid w-100" alt="...">
+                <img src="/assets/banner5.jpg" class="d-block img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column justify-content-center h-100">
                     <h1>crs</h1>
                 </div>
@@ -131,7 +131,7 @@
             <h1 class="text-center text-uppercase">About Us</h1>
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                    <img src="/images/about.jpg" alt="" class="img-thumbnail img-fluid">
+                    <img src="/assets/about.jpg" alt="" class="img-thumbnail img-fluid">
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center">
                     <p>
@@ -400,24 +400,24 @@
     <!-- Js  -->
     <script>
         let calcScrollValue = () => {
-        let scrollProgress = document.getElementById("progress");
-        let progressValue = document.getElementById("progress-value");
-        let pos = document.documentElement.scrollTop;
-        let calcHeight =
-        document.documentElement.scrollHeight -
-        document.documentElement.clientHeight;
-        let scrollValue = Math.round((pos * 100) / calcHeight);
-        if (pos > 100) {
-        scrollProgress.style.display = "grid";
-        } else {
-        scrollProgress.style.display = "none";
-        }
-        scrollProgress.addEventListener("click", () => {
-        document.documentElement.scrollTop = 0;
-        });
-        scrollProgress.style.background = `conic-gradient(#1E6692 ${scrollValue}%, #d7d7d7 ${scrollValue}%)`;
+            let scrollProgress = document.getElementById("progress");
+            let progressValue = document.getElementById("progress-value");
+            let pos = document.documentElement.scrollTop;
+            let calcHeight =
+                document.documentElement.scrollHeight -
+                document.documentElement.clientHeight;
+            let scrollValue = Math.round((pos * 100) / calcHeight);
+            if (pos > 100) {
+                scrollProgress.style.display = "grid";
+            } else {
+                scrollProgress.style.display = "none";
+            }
+            scrollProgress.addEventListener("click", () => {
+                document.documentElement.scrollTop = 0;
+            });
+            scrollProgress.style.background = `conic-gradient(#1E6692 ${scrollValue}%, #d7d7d7 ${scrollValue}%)`;
         };
-        
+
         window.onscroll = calcScrollValue;
         window.onload = calcScrollValue;
 
