--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-                <img src="./assets/banner.png" class="d-block img-fluid w-100" alt="...">
+                <img src="assets/banner.png" class="d-block img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column justify-content-center h-100">
                     <h1>Welcome to <br> <span>LANCETECH LIMITED</span></h1>
                     <p>Part of your Business</p>
