--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         rel="stylesheet">
     <!-- CSS stylesheet link  -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
                     </span>
                     <span>
                         <a href="tel: 00000000000"><i class="fa-solid fa-phone"></i>
-                            00000000000</a>
+                            07936460540</a>
                     </span>
                 </div>
                 <div class="col-auto social-links">
@@ -92,25 +93,25 @@
             <div class="carousel-item" data-bs-interval="2000">
                 <img src="./assets/banner2.jpg" class="d-block img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column justify-content-center h-100">
-                    <h1>Chromatography Columns & Consumables</h1>
+                    <h1>CHROMATOGRAPHY <br> COLUMNS & CONSUMABLES <br> OF ALL MAJOR BRANDS</h1>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="./assets/banner3.jpg" class="d-block img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column justify-content-center h-100">
-                    <h1>Save the World</h1>
+                    <h1>Lend a Hand to Save the Earth</h1>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="./assets/banner4.jpg" class="d-block img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column justify-content-center h-100">
-                    <h1>crs</h1>
+                    <h1>You can find variety of crs here</h1>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="./assets/banner5.jpg" class="d-block img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column justify-content-center h-100">
-                    <h1>crs</h1>
+                    <h1>Find your all required chemicals...</h1>
                 </div>
             </div>
         </div>
@@ -292,7 +293,7 @@
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 contact-us-col-box">
                     <i class="fa-solid fa-phone-volume"></i>
                     <h6>Call Us</h6>
-                    <p>00000000000</p>
+                    <p>07936460540</p>
                 </div>
             </div>
             <!-- contact-form  -->
