--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="carousel-item" data-bs-interval="2000">
                 <img src="./assets/banner2.jpg" class="d-block img-fluid w-100" alt="...">
                 <div class="carousel-caption  d-flex flex-column justify-content-center h-100">
-                    <h1>CHROMATOGRAPHY <br> COLUMNS & CONSUMABLES <br> OF ALL MAJOR BRANDS</h1>
+                    <h1>CHROMATOGRAPHY COLUMNS & CONSUMABLES OF ALL MAJOR BRANDS</h1>
                 </div>
             </div>
             <div class="carousel-item">
@@ -250,7 +250,7 @@
                             Accessories.</span>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 supply-col">
                     <h5>We also supply</h5>
                     <div class="also-supply_box">
                         <span><i class="fa-solid fa-gift"></i> All consumables lab items.</span>
@@ -298,7 +298,7 @@
             </div>
             <!-- contact-form  -->
             <div class="contact-form-box">
-                <h2>Get in Touch</h2>
+                <h1>Get in Touch</h1>
                 <form class="contact-form" action="index.php" method="POST" id="formid">
                     <div class="row m-auto">
                         <div class="col-lg-6 form-group">
@@ -337,7 +337,7 @@
     <footer class="footer">
         <div class="container footer-box">
             <div class="row">
-                <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 footer-contact-info">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 footer-contact-info">
                     <h6>LANCETECH LIMITED.</h6>
                     <p>347 Eastern Avenue, Ilford, England, IG2 6NE</p>
                     <div class="contact-option">
@@ -351,7 +351,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 footer-quick-links">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 footer-quick-links">
                     <h6>QUICK LINKS</h6>
                     <ul>
                         <li>
