--- a/index.html
+++ b/index.html
@@ -137,25 +137,18 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center">
                     <p>
                         <span>
-                            LANCETECH LIMITED is modern formatted organization participated in providing a wide range of
-                            lab items and
-                            administrations
-                            utilized in QC, QA, Bio-pharmaceuticals and R & D labs. We trust in "Service Support with
-                            Care and trustworthiness". All
-                            its operations are managed by a team of professional and skilled people.
+                            LANCETECH LIMITED is current designed association took part in giving a large number of lab things and organizations
+                            used in QC, QA, Bio-drugs and R and D labs. We confide in "Administration Backing with Care and dependability".
                         </span>
                         <span>
-                            We are dedicated to pursuing greatness through exceptional service, and empowered employees
-                            to give our clients the
-                            highest degree of pleasure.
+                            Every one of its tasks are overseen by a group of expert and talented individuals. We are devoted to seeking after
+                            significance through extraordinary assistance, and enabled workers to provide our clients with the most extensive level
+                            of delight.
                         </span>
                         <span>
-                            LANCETECH LIMITED focuses on the healthcare industry, particularly the pharmaceutical,
-                            research laboratory, and hospital
-                            sectors
-                            as well as food & beverages, testing labs, textiles to provide them with high-quality goods
-                            and services in accordance
-                            with their needs.
+                            LANCETECH LIMITED focuses on the healthcare industry, especially the pharmaceutical, research laboratory, testing labs,
+                            hospital sectors as well as food & beverages, textiles to provide them with high-quality goods and services in
+                            accordance with their necessities.
                         </span>
                     </p>
                     <div class="mission-vission">
@@ -166,11 +159,9 @@
                             <div class="">
                                 <h5>MISSION</h5>
                                 <ul>
-                                    <li>We strive to be the industry standard in service to customers.</li>
-                                    <li>We maintain a superior level of integrity in interactions with business partners
-                                        and associates.</li>
-                                    <li>We appreciate our achieved success and we conduct our business as model
-                                        corporate citizens.</li>
+                                    <li>We endeavor to be the business standard in support of our customers.</li>
+                                    <li>We maintain a superior level of integrity in interactions with business partners and associates.</li>
+                                    <li>We keep an unrivaled degree of respectability in cooperations with business partners and associates.</li>
                                 </ul>
                             </div>
                         </div>
@@ -181,9 +172,8 @@
                             <div class="">
                                 <h5>Vission</h5>
                                 <ul>
-                                    <li>To become the innovative instigated turnkey solution provider to the global
-                                        healthcare and life science
-                                        industries.</li>
+                                    <li>To turn into the inventive impelled turnkey arrangement supplier to the worldwide Health care and life science
+                                    enterprises.</li>
                                 </ul>
                             </div>
                         </div>
@@ -230,13 +220,9 @@
         <div class="container">
             <div class="product_service-title-description">
                 <h1 class="text-center">PRODUCTS & SERVICES</h1>
-                <p>LANCETECH LIMITED supply all types of laboratory materials, equipments, and analytical instruments
-                    for
-                    pharmaceutical companies,
-                    biochemistry labs, microbiology labs, research laboratory, university research labs, food &
-                    beverages,
-                    testing labs,
-                    textiles.</p>
+                <p>LANCETECH LIMITED supply a wide range of lab equipment, materials and analytical instruments for pharmaceutical
+                companies, biochemistry labs, microbiology labs, research laboratory, university research labs, food & beverages,
+                testing labs, textiles.</p>
             </div>
             <div class="row supply">
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
