--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     <h5>We also supply</h5>
                     <div class="also-supply_box">
                         <span><i class="fa-solid fa-gift"></i> All consumables lab items.</span>
-                        <span><i class="fa-solid fa-gift"></i> Chemical Reference standard (USP, BP and EP).</span>
+                        <span><i class="fa-solid fa-gift"></i> Chemical Reference standard (BP, EP).</span>
                         <span><i class="fa-solid fa-gift"></i> Used instruments in UK and worldwide with
                             services.</span>
                         <span><i class="fa-solid fa-gift"></i> Spare parts of different machines used in
